# workspace

./: README.md
README/: README.md
ros_ur_driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ur_driver/log/: latest_build
ros_ur_driver/runs/24-11-14_23-59-29-285404_PPO/: events.out.tfevents.1731646769.SebasPC.540852.0
ros_ur_driver/runs/24-11-15_00-00-07-500469_PPO/: events.out.tfevents.1731646807.SebasPC.541420.0
ros_ur_driver/runs/24-11-15_00-04-51-702741_PPO/: events.out.tfevents.1731647091.SebasPC.545832.0
ros_ur_driver/runs/24-11-15_00-06-08-421676_PPO/: events.out.tfevents.1731647168.SebasPC.546969.0
ros_ur_driver/runs/24-11-15_00-07-18-350549_PPO/: events.out.tfevents.1731647238.SebasPC.547982.0
ros_ur_driver/runs/24-11-15_00-09-30-063783_PPO/: events.out.tfevents.1731647370.SebasPC.549897.0
ros_ur_driver/runs/24-11-15_00-18-50-000947_PPO/: events.out.tfevents.1731647930.SebasPC.558114.0
ros_ur_driver/runs/24-11-15_00-21-18-919061_PPO/: events.out.tfevents.1731648078.SebasPC.560303.0
ros_ur_driver/runs/24-11-15_06-56-56-429094_PPO/: events.out.tfevents.1731671816.SebasPC.896470.0
ros_ur_driver/runs/24-11-15_07-11-19-113392_PPO/: events.out.tfevents.1731672679.SebasPC.921472.0
ros_ur_driver/runs/24-11-15_07-12-11-990721_PPO/: events.out.tfevents.1731672731.SebasPC.922999.0
ros_ur_driver/runs/24-11-15_07-14-18-905300_PPO/: events.out.tfevents.1731672858.SebasPC.926592.0
ros_ur_driver/src/ur3_rl/: package.xml  setup.cfg  setup.py
ros_ur_driver/src/ur3_rl/ur3_rl/: best_agent.pt  simple_controller.py
(+159 files in other folders)
